# EduPredict---Student-Performance-Prediction-System-

./: .gitignore  LICENSE  README.md  application.py  main.py  pyproject.toml  requirements.txt  setup.py
notebooks/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: prediction_pipeline.py
static/css/: styles.css
templates/: home.html  index.html
